--- a/styling a flex component/css/blocks/content2.css
+++ b/styling a flex component/css/blocks/content2.css
@@ -1,6 +1,14 @@
+.wrapper {
+    display: flex;
+    border: 1px dotted burlywood;
+    padding: 10px;
+    justify-content: space-between;
+}
+
 .content2 {
     display: flex;
     border: 1px solid rgb(148, 30, 56);
+    margin: 5px;
 }
 
 .content2__element {
@@ -12,6 +20,30 @@
 
 .content2__element--blue {
     background-color: blue;
+}
+
+.content2__date {
+
+}
+
+.content2__time {
+
+}
+
+.content2__title {
+
+}
+
+.content2__image {
+
+}
+
+.content2__link {
+
+}
+
+.content2__basket {
+    
 }
 
 .content2__element--green {
