--- a/styling a flex component/css/blocks/content2.css
+++ b/styling a flex component/css/blocks/content2.css
@@ -22,28 +22,56 @@
     background-color: blue;
 }
 
-.content2__date {
+.content2__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    border: 1px dotted gold;
+    padding: 2px;
+}
 
+.content2__date {
+    height: 5px;
+    width: 50px;
+    background-color: brown;
 }
 
 .content2__time {
-
+    height: 5px;
+    width: 50px;
+    background-color: crimson;
 }
 
 .content2__title {
-
+    height: 5px;
+    width: 100px;
+    background-color: blanchedalmond;
 }
 
 .content2__image {
+    height: 20px;
+    width: 150px;
+    background-color: cadetblue;
+    margin: 5px 0;
+}
 
+.content2__bottom {
+    display: flex;
+    justify-content: space-between;
+    border: 1px dotted rgb(177, 159, 61);
+    padding: 2px;
 }
 
 .content2__link {
-
+    height: 5px;
+    width: 40px;
+    background-color: burlywood;
 }
 
 .content2__basket {
-    
+    height: 5px;
+    width: 40px;
+    background-color: chartreuse;
 }
 
 .content2__element--green {
@@ -52,4 +80,44 @@
 
 .content2__element--yellow {
     background-color: yellow;
+}
+
+.content3 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 620px;
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid burlywood;
+    gap: 40px 20px;
+}
+
+.content3__element {
+    height: 70px;
+    width: 100px;
+    border: 1px dotted khaki;
+    background-color: #c92828;
+}
+
+.content4 {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 300px;
+    padding: 20px;
+    margin: 0 auto;
+    border: 1px solid firebrick;
+}
+
+.content4__title {
+    width: 300px;
+    height: 50px;
+    background-color: #bb1010;
+    margin-bottom: 20px;
+}
+
+.content4__text {
+    width: 400px;
+    height: 100px;
+    background-color: #3634a1;
 }
