--- a/styling a flex component/styling a flex component practice/css/blocks/product-card.css
+++ b/styling a flex component/styling a flex component practice/css/blocks/product-card.css
@@ -13,3 +13,23 @@
     margin: 0 0 35px;
     text-align: center;
 }
+
+.product-card__heading {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 0 0 25px;
+}
+
+.product-card__img {
+    width: 228px;
+    height: 152px;
+    border-radius: 0 130px 0 130px;
+}
+
+.product-card__name {
+    font-size: 16px;
+    line-height: 20px;
+    font-style: italic;
+    color: #0e6e49;
+}
