--- a/styling a flex component/styling a flex component practice/css/blocks/product-card.css
+++ b/styling a flex component/styling a flex component practice/css/blocks/product-card.css
@@ -52,6 +52,7 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    margin: 0 0 20px;
 }
 
 .product-card__care-group {
@@ -76,4 +77,29 @@
     font-size: 12px;
     line-height: 12px;
     color: #ac4747;
+}
+
+.product-card__links {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.product-card__link {
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 700;
+    color: #d4b4b4;
+    background-color: #462cb9;
+    padding: 14px;
+    text-align: center;
+    border-radius: 30px;
+    width: 50%;
+}
+
+.product-card__link--secondary {
+    background-color: unset;
+    border: 1px solid green;
+    color: #7e3b3b;
+
 }
