--- a/styling a flex component/styling a flex component practice/css/blocks/product-card.css
+++ b/styling a flex component/styling a flex component practice/css/blocks/product-card.css
@@ -2,7 +2,9 @@
     background: linear-gradient(89.82deg, #C1DFC4 2.25%, #DEECDD 99.84%);
     border-radius: 20px;
     padding: 22px 20px 25px;
-    width: 380px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .product-card__title {
@@ -46,6 +48,7 @@
     background-color: #cec4c4;
     border-radius: 20px;
     padding: 20px;
+    margin: auto 0 0;
 }
 
 .product-card__care {
