--- a/styling a flex component/styling a flex component practice/css/blocks/products.css
+++ b/styling a flex component/styling a flex component practice/css/blocks/products.css
@@ -1,3 +1,11 @@
 .products {
-    
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 70px 30px;
+}
+
+.products__item {
+    width: 33.33%;
 }
