--- a/styling a flex component/styling a flex component practice/css/blocks/products.css
+++ b/styling a flex component/styling a flex component practice/css/blocks/products.css
@@ -4,8 +4,9 @@
     list-style-type: none;
     display: flex;
     gap: 70px 30px;
+    flex-wrap: wrap;
 }
 
 .products__item {
-    width: 33.33%;
+    width: calc(33.33% - 20px);
 }
