--- a/styling a flex component/styling a flex component practice/css/blocks/page-content.css
+++ b/styling a flex component/styling a flex component practice/css/blocks/page-content.css
@@ -1,6 +1,8 @@
-.page-content{
-    padding: 0px 100px 50px;
-}
+.page-content {
+    padding: 70px 40px;
+    width: 1280px;
+    margin: 0 auto;
+  }
 
 .page-content__title {
     font-weight: 700;
